# certbot-uyuni

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
certbot_uyuni/: __init__.py  installer.py
certbot_uyuni/tests/: installer_test.py
