[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "certbot-uyuni"
dynamic = ["version"]
description = "Uyuni Server plugin"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Environment :: Plugins",
]
dependencies = ["certbot>=2.0"]

[project.optional-dependencies]
dev = ["mypy>=2.1", "pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/MPG-MMPS/certbot-uyuni"

[project.entry-points."certbot.plugins"]
uyuni = "certbot_uyuni.installer:UyuniInstaller"

[tool.setuptools_scm]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["certbot.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["certbot_uyuni.installer"]
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = ["certbot_uyuni.tests.*"]
disable_error_code = ["method-assign"]
